--- a/playbook/playbook_init_server.yaml
+++ b/playbook/playbook_init_server.yaml
@@ -11,13 +11,31 @@
             version {{ ansible_distribution_version }}
             famely {{ ansible_os_family }}.
 
-    - name: Update cache
-      apt:
-        update_cache: yes
+    - name: Update cache, upgrade and install package is famely Debian
+      when: ansible_os_family == "Debian"
+      block:
+      - name: Update cache
+        apt:
+          update_cache: yes
+      - name: Upgarde
+        apt:
+          upgrade: yes
+      - name: Install packages
+        ansible.builtin.package:
+          name: "{{ packages }}"
+          state: present
 
-    - name: Upgarde
-      apt:
-        upgrade: yes
+    - name: Update cache, upgrade and install package is famely Debian
+      when: ansible_os_family == "RedHat"
+      block:
+        - name: Upgrade all packages
+          ansible.builtin.dnf:
+            name: "*"
+            state: latest
+        - name: Install packages
+          ansible.builtin.package:
+            name: "{{ packages }}"
+            state: present
 
     - name: Set a hostname
       hostname:
@@ -27,10 +45,6 @@
     - name: Set timezone using shell
       shell: timedatectl set-timezone Europe/Moscow
 
-    - name: Install packages
-      apt:
-        name: "{{ packages }}"
-        state: present
 
 #Asia/Tokyo
     # - name: Set timezone to Europe/Moscow
