--- a/playbook/playbook_instal_pg.yaml
+++ b/playbook/playbook_instal_pg.yaml
@@ -4,14 +4,21 @@
   become: true
 
   tasks:
-    - name: Check if file exists using stat module
-      stat:
-        path: /etc/apt/sources.list.d/postgresql-1c-{{ version }}.list
-      register: file_status
+    - name: Update cache, upgrade and install package is famely Debian
+      when: ansible_os_family == "Debian"
+      block: 
+        - name: Check if file exists using stat module
+          stat:
+            path: /etc/apt/sources.list.d/postgresql-1c-{{ version }}.list
+          register: file_status
 
-    - name: Print file status
-      debug:
-        var: file_status.stat.exists
+    - name: Update cache, upgrade and install package is famely RedHat
+      when: ansible_os_family == "RedHat"
+      block:
+        - name: Check if file exists using stat module
+          stat:
+            path: /etc/yum.repos.d/postgresql-1c-{{ version }}.repo
+          register: file_status
 
     - name: Install, configure repository postgrespro
       when: file_status.stat.exists == false
@@ -20,13 +27,11 @@
         become: false
         shell: echo "$USER"
         register: username
-  
       - name: Download pgpro-repo-add.sh
         get_url:
           url: https://repo.postgrespro.ru/1c/1c-{{ version }}/keys/pgpro-repo-add.sh
           dest: /home/{{ username.stdout }}/
           mode: '0751'
-  
       - name: Run script add repository
         shell: "sudo /home/{{ username.stdout }}/pgpro-repo-add.sh"
         
