--- a/playbook/playbook_init_server.yaml
+++ b/playbook/playbook_init_server.yaml
@@ -25,7 +25,7 @@
           name: "{{ packages }}"
           state: present
 
-    - name: Update cache, upgrade and install package is famely Debian
+    - name: Update cache, upgrade and install package is famely RedHat
       when: ansible_os_family == "RedHat"
       block:
         - name: Upgrade all packages
