--- a/playbook/playbook_instal_pg.yaml
+++ b/playbook/playbook_instal_pg.yaml
@@ -12,17 +12,17 @@
             path: /etc/apt/sources.list.d/postgresql-1c-{{ version }}.list
           register: file_status
 
-    - name: Update cache, upgrade and install package is famely RedHat
-      when: ansible_os_family == "RedHat"
-      block:
-        - name: Check if file exists using stat module is famely RedHat
-          stat:
-            path: /etc/yum.repos.d/postgresql-1c-{{ version }}.repo
-          register: file_status
+    # - name: Update cache, upgrade and install package is famely RedHat
+    #   when: ansible_os_family == "RedHat"
+    #   block:
+    #     - name: Check if file exists using stat module is famely RedHat
+    #       stat:
+    #         path: /etc/yum.repos.d/postgresql-1c-{{ version }}.repo
+    #       register: file_status
 
     - name: Family OS 
       debug:
-        msg: "{{ file_status.stat }}"
+        msg: "{{ file_status }}"
 
     - name: Install, configure repository postgrespro
       when: file_status.stat.exists == false
