--- a/playbook/prox_mox/playbook_create_template.yml
+++ b/playbook/prox_mox/playbook_create_template.yml
@@ -5,7 +5,7 @@
 
   tasks:
     - name: Select {{ vm_id }}
-      shell: qm list | grep 8000
+      shell: qm list | grep {{ vm_id }}
       register: search_vm_id
 
     - name: version {{ vm_id }}
