--- a/playbook/playbook_init_server.yaml
+++ b/playbook/playbook_init_server.yaml
@@ -45,6 +45,11 @@
     - name: Set timezone using shell
       shell: timedatectl set-timezone Europe/Moscow
 
+    - name: Ensure localisation files for ru_RU.UTF-8 are available
+      locale_gen:
+        name: ru_RU.UTF-8
+        state: present
+
 
 #Asia/Tokyo
     # - name: Set timezone to Europe/Moscow
