--- a/playbook/prox_mox/playbook_create_template.yml
+++ b/playbook/prox_mox/playbook_create_template.yml
@@ -34,9 +34,10 @@
         shell: qm create {{ vm_id }} --memory 2048 --net0 virtio,bridge=vmbr0 --scsihw virtio-scsi-single --machine q35 --cpu x86-64-v3 --cores 2 && \
                qm set {{ vm_id }} --scsi0 local-lvm:0,import-from=/var/lib/vz/template/iso/noble-server-cloudimg-amd64.img,discard=on,ssd=1,iothread=1 && \
                qm set {{ vm_id }} --ide2 local-lvm:cloudinit && \
-               qm set {{ vm_id }} --boot order=scsi0 && \
+               qm set {{ vm_id }} --boot order=scsi0 --agent 1 --ostype l26 && \
                qm set {{ vm_id }} --ciuser diadmin --cipassword '123Qwe!@' --sshkeys /root/.ssh/id_rsa_vbitadmin.pub --ipconfig0 ip=dhcp --ciupgrade false && \
-               qm set {{ vm_id }} --ostype l26
+               qm resize {{ vm_id }} scsi0 +512M
+
 
 #fvvdv
 # qm create 8000 --memory 2048 --net0 virtio,bridge=vmbr0 --scsihw virtio-scsi-single --machine q35 --cpu x86-64-v3 --cores 2
