--- a/playbook/server_1c/playbook_uninstall_1c.yml
+++ b/playbook/server_1c/playbook_uninstall_1c.yml
@@ -2,6 +2,8 @@
 - name: Uninstall server-1C
   hosts: all
   become: true
+  vars:
+    ansible_become_password: {{ sudo_password }}
 
   tasks:
     - name: Search version 1C 
