--- a/playbook/playbook_init_server.yaml
+++ b/playbook/playbook_init_server.yaml
@@ -42,13 +42,20 @@
         name: "{{ hostname }}"
         use: systemd
 
+    - name: Set default locale to ru_RU.UTF-8
+      ansible.builtin.debconf:
+        name: locales
+        question: locales/default_environment_locale
+        value: ru_RU.UTF-8
+        vtype: select
+
     - name: Set timezone using shell
       shell: timedatectl set-timezone Europe/Moscow
 
-    - name: Ensure localisation files for ru_RU.UTF-8 are available
-      community.general.locale_gen:
-        name: ru_RU.UTF-8
-        state: present
+    # - name: Ensure localisation files for ru_RU.UTF-8 are available
+    #   community.general.locale_gen:
+    #     name: ru_RU.UTF-8
+    #     state: present
 
 
 #Asia/Tokyo
